--- a/sass/components/smart/details/_smart-details.scss
+++ b/sass/components/smart/details/_smart-details.scss
@@ -19,7 +19,7 @@
 }
 
 .smart-details--heading {
-  padding: 5px 10px;
+  padding: 10px;
   margin: 0;
 }
 
